--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Alex Link</h1>
 						<h2>Data Scientist<br />
-						Lifelong Learner</h2>
+						<em>Lifelong Learner</em></h2>
 						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
