--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Alex Link</h1>
+						<h1>Alex Link, CFA</h1>
 						<h2 style="color: orange;"><br />Data Scientist, Investment Professional</h2>
 						<h3 style="color: orange;"><em>Lifelong Learner</em></h3>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>Master's degrees in Data Science/Machine Learning and Financial Economics<br />
+						With a history of working across domains and a constant drive for knowledge</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
