--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Alex Link, CFA</h1>
 						<h2 style="color: orange;"><br />Data Scientist, Investment Professional</h2>
-						<h3 style="color: orange;"><em>Lifelong Learner</em></h3>
+						<h3 style="color: orange;"><em>Adley Rutschman Fan</em></h3>
 						<p>Master's degrees in Data Science/Machine Learning and Financial Economics<br />
 						With a history of working across domains and a constant drive for knowledge</p>
 						<ul class="actions">
@@ -31,15 +31,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Go O's!</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">About Me</a></li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="samples.html">Sample Work</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
