--- a/samples.html
+++ b/samples.html
@@ -41,10 +41,10 @@
 					<div id="main">
 
 						<!-- Post -->
-    						<section style="text-align: center; padding: 20px; margin-top: 10px; margin-bottom: 10px;">
+    						<section style="text-align: center; padding: 10px; margin-top: 10px; margin-bottom: 10px;">
                                 <header style="margin: 0; padding: 10px 0;">
                                     <h3 style="margin: 10px 0;">Project Summaries</h3>
-                                    <h5 style="margin: 10px 0;"><em>(Click Titles to Jump to Detailed Papers)</em></h5>
+                                    <h5 style="margin: 10px 0;"><em>(Click Titles to Load Detailed Papers)</em></h5>
                             </header>
                             </section>
     				
