--- a/samples.html
+++ b/samples.html
@@ -45,7 +45,7 @@
                                 <header style="margin: 0; padding: 1px 0;">
                                     <h3 style="margin: 5px 0;">Project Summaries</h3>
                                     <h5 style="margin: 5px 0;"><em>(Click Titles to Load Detailed Papers)</em></h5>
-                            </header>
+                                </header>
                             </section>
     				
 								<!-- Project Summaries -->
@@ -53,7 +53,9 @@
     								<article>
             								<a href="#" data-repo="aclink88/music-through-years"><h2>NLP Music Evolution</h2></a>
             								<p> Natural Language Processing project analyzing the evolution of sentiment & topic modeling across the most popular songs of the past 50 years using the Billboard Hot 100 year end rankings to represent popularity. </p>
-            								<a href="https://github.com/aclink88/music-through-years"><h6>(GitHub repo link)</h6></a>
+            								<header style="margin: 0; padding: 1px 0;">
+                								<a href="https://github.com/aclink88/music-through-years"><h6 style="margin: 1px 0;">(GitHub repo link)</h6></a>
+                                            </header>		
         							</article>
         						</section>
         										
