--- a/samples.html
+++ b/samples.html
@@ -52,16 +52,16 @@
 								<section class="posts">
     								<article>
             								<a href="#" data-repo="aclink88/music-through-years"><h2>NLP Music Evolution</h2></a>
-            								<p> Natural Language Processing project analyzing the evolution of sentiment & topic modeling across the most popular songs of the past 50 years using the Billboard Hot 100 year end rankings to represent popularity. </p>
-            								<header style="margin: 0; padding: 0px 0;">
-                								<a href="https://github.com/aclink88/music-through-years"><h6 style="margin: 0px 0;">(GitHub repo link)</h6></a>
+            								<p style="margin: 0 0 5px 0;">Natural Language Processing project analyzing the evolution of sentiment & topic modeling across the most popular songs of the past 50 years using the Billboard Hot 100 year end rankings to represent popularity. </p>
+            								<header style="margin: 0; padding: 0;">
+                								<a href="https://github.com/aclink88/music-through-years"><h6 style="margin: 0;">(GitHub repo link)</h6></a>
                                             </header>		
         							</article>
         						</section>
         										
-        						<div id="readmeContent">
+        						<!-- <div id="readmeContent"> -->
             						<!-- README content will be loaded here -->
-                                </div>
+                                <!-- </div> -->
 					</div>
 
 				<!-- Footer -->
