additional resume formatting

--- a/resume.html
+++ b/resume.html
@@ -47,45 +47,46 @@
                             <h4>Investment Portfolio Manager</h4>
                             <h5>Richmond, VA <i>(February 2018 to April 2022)</i></h5>
                                 <ul id="l1"><li data-list-text="•"><p>Conduct market and portfolio research, primarily utilizing FactSet Financial data applications as well as Python analytical libraries</p>
-                                    <ul id="l2"><li data-list-text="-"><p>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</p></li>
+                                    <ul id="l2", style="list-style-type: hyphen;">
+                                    <li data-list-text="-"><p>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</p></li>
                                     <li data-list-text="-"><p>Employ SPAR (Style, Performance &amp; Risk) returns-based analysis along with peer universe data to determine appropriate portfolio exposures</p></li>
                                     <li data-list-text="-"><p>Carry out Attribution analysis to provide detailed breakdowns of the aspects of a fund manager’s performance</p></li>
                                     </ul>
-                                    </li>
                                 <li data-list-text="•"><p>Manage institutional portfolios through trade execution, as appropriate per client investment policy</p></li>
-                                <li data-list-text="•"><p>Compose informational research papers for distribution to current and prospective clients</p>
-                                    <ul id="l3"><li data-list-text="-"><p>Researched and authored a white paper on Inflation Metrics and their validity as performance benchmarks</p></li>
+                                <li data-list-text="•"><p>Compose informational research papers for distribution to current and prospective clients</p></li>
+                                    <ul id="l3", style="list-style-type: hyphen;">
+                                    <li data-list-text="-"><p>Researched and authored a white paper on Inflation Metrics and their validity as performance benchmarks</p></li>
                                     </ul>
-                                    </li>
-                                <li data-list-text="•"><p>Provide administrative support in meeting client requests</p>
-                                    <ul id="l4"><li data-list-text="-"><p>Develop investment review books to provide clients with performance updates</p>
+                                <li data-list-text="•"><p>Provide administrative support in meeting client requests</p></li>
+                                    <ul id="l4", style="list-style-type: hyphen;">
+                                    <li data-list-text="-"><p>Develop investment review books to provide clients with performance updates</p></li>
                                     </ul>
-                                    </li>
                             <!-- <p style="padding-top: 1pt;text-indent: 0pt;text-align: left;"><br/></p> -->
                             <h3>Virginia Department of Accounts</h3>
                             <h4>E-Commerce Analyst</h4>
                             <h5>Richmond, VA <i>(July 2013 to January 2018)</i></h3>
-                            </li>
-                            </ul>
-                            </li>
+                            <!-- </li></ul></li> -->
                                 <li data-list-text="•"><p>Analyze and reconcile ePayables suspense account and monthly statement prior to processing to ensure proper payment</p></li>
-                                <li data-list-text="•"><p>Calculate and analyze quarterly statistics of the state purchase card program, including:</p>
-                                    <ul id="l5"><li data-list-text="-"><p>Calculate agencies’ utilization rate of charge card program and late payments to vendors</p></li>
+                                <li data-list-text="•"><p>Calculate and analyze quarterly statistics of the state purchase card program, including:</p></li>
+                                    <ul id="l5", style="list-style-type: hyphen;">
+                                    <li data-list-text="-"><p>Calculate agencies’ utilization rate of charge card program and late payments to vendors</p></li>
                                     <li data-list-text="-"><p>Estimate checks saved by implementing state issued credit cards</p></li>
                                     </ul>
-                                    </li>
                                 <li data-list-text="•"><p>Conduct weekly audits related to state issued credit card purchases &amp; spend analysis to maintain adequate spending limits</p></li>
-                                <li data-list-text="•"><p>Identify duplicate &amp; unprocessed payments to vendors and return these funds to agencies &amp; reissue to vendors, respectively</p>
+                                <li data-list-text="•"><p>Identify duplicate &amp; unprocessed payments to vendors and return these funds to agencies &amp; reissue to vendors, respectively</p></li>
                         <h2>Certifications:</h2>
                             <p>CFA Charterholder</p> <!-- <p><br/></p> -->
                         <h2>Education:</h2>
-                            <p>University of Virginia, Charlottesville, VA Master of Science in Data Science December 2021</p>
-                            <p>Virginia Commonwealth University, Richmond, VA Master of Science in Finance</p>
-                            <p>May 2015</p>
-                            <p>North Carolina State University, Raleigh, NC Bachelor of Arts in Economics</p>
-                            <p>Minor in Business Administration with a Concentration in Management Cum Laude, May 2013</p>
+                            <h5>University of Virginia</h5> 
+                            <p>Master of Science in Data Science <i>(December 2021)</i></p>
+                            <h5>Virginia Commonwealth University</h5> 
+                            <p>Master of Science in Finance <i>(May 2015)</i></p>
+                            <h5>North Carolina State University</h5>
+                                <ul id="l6", style="list-style-type: hyphen;">
+                                <li data-list-text="-"><p>Bachelor of Arts in Economics, <i>Cum Laude (May 2013)</i></p></li>
+                                <li data-list-text="-"><p>Minor in Business Administration with a Concentration in Management</p></li>
+                                </ul>
                         <h2>Related Coursework:</h2>
-                        </li>
                             <li data-list-text="•"><p>Financial Markets – Analysis of financial securities and performance of different portfolios made up of these instruments against market index benchmarks using Excel</p></li>
                             <li data-list-text="•"><p>Derivatives Analysis – Pricing of options using binomial lattices and Black-Scholes formula, as well as implementing various options strategies and graphing them using Excel</p></li>
                             <li data-list-text="•"><p>Econometrics – Provided empirical content to theoretical economic concepts by formulating and estimating models</p></li>
