--- a/resume.html
+++ b/resume.html
@@ -48,9 +48,9 @@
                             <h5>Richmond, VA <i>(February 2018 to April 2022)</i></h5>
                                 <ul id="l1"><li data-list-text="•"><p>Conduct market and portfolio research, primarily utilizing FactSet Financial data applications as well as Python analytical libraries</p>
                                     <ul id="l2", style="list-style-type: hyphen;">
-                                    <li data-list-text="-"><p>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</p></li>
-                                    <li data-list-text="-"><p>Employ SPAR (Style, Performance &amp; Risk) returns-based analysis along with peer universe data to determine appropriate portfolio exposures</p></li>
-                                    <li data-list-text="-"><p>Carry out Attribution analysis to provide detailed breakdowns of the aspects of a fund manager’s performance</p></li>
+                                    <li><p>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</p></li>
+                                    <li><p>Employ SPAR (Style, Performance &amp; Risk) returns-based analysis along with peer universe data to determine appropriate portfolio exposures</p></li>
+                                    <li><p>Carry out Attribution analysis to provide detailed breakdowns of the aspects of a fund manager’s performance</p></li>
                                     </ul>
                                 <li data-list-text="•"><p>Manage institutional portfolios through trade execution, as appropriate per client investment policy</p></li>
                                 <li data-list-text="•"><p>Compose informational research papers for distribution to current and prospective clients</p></li>
@@ -61,6 +61,7 @@
                                     <ul id="l4", style="list-style-type: hyphen;">
                                     <li data-list-text="-"><p>Develop investment review books to provide clients with performance updates</p></li>
                                     </ul>
+                                </ui>
                             <!-- <p style="padding-top: 1pt;text-indent: 0pt;text-align: left;"><br/></p> -->
                             <h3>Virginia Department of Accounts</h3>
                             <h4>E-Commerce Analyst</h4>
