--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic Page - Massively by HTML5 UP</title>
+		<title>Alex Link - Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,9 +48,9 @@
                             <h5>Richmond, VA <i>(February 2018 to April 2022)</i></h5>
                                 <ul id="l1"><li data-list-text="•"><p>Conduct market and portfolio research, primarily utilizing FactSet Financial data applications as well as Python analytical libraries</p>
                                     <ul id="l2", style="list-style-type: hyphen;">
-                                    <li><p>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</p></li>
-                                    <li><p>Employ SPAR (Style, Performance &amp; Risk) returns-based analysis along with peer universe data to determine appropriate portfolio exposures</p></li>
-                                    <li><p>Carry out Attribution analysis to provide detailed breakdowns of the aspects of a fund manager’s performance</p></li>
+                                    <li>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</li>
+                                    <li>Employ SPAR (Style, Performance &amp; Risk) returns-based analysis along with peer universe data to determine appropriate portfolio exposures</li>
+                                    <li>Carry out Attribution analysis to provide detailed breakdowns of the aspects of a fund manager’s performance</li>
                                     </ul>
                                 <li data-list-text="•"><p>Manage institutional portfolios through trade execution, as appropriate per client investment policy</p></li>
                                 <li data-list-text="•"><p>Compose informational research papers for distribution to current and prospective clients</p></li>
