--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
                             <h4>Investment Portfolio Manager</h4>
                             <h5>Richmond, VA <i>(February 2018 to April 2022)</i></h5>
                                 <ul id="l1"><li data-list-text="•"><p>Conduct market and portfolio research, primarily utilizing FactSet Financial data applications as well as Python analytical libraries</p>
-                                    <ul id="l2", style="list-style-type: hyphen;">
+                                    <ul id="l2" style="list-style-type: hyphen;">
                                     <li>Perform Monte Carlo simulations &amp; utilize portfolio optimization functions to determine optimal asset allocation to meet client goals</li>
                                     <li>Employ SPAR (Style, Performance &amp; Risk) returns-based analysis along with peer universe data to determine appropriate portfolio exposures</li>
                                     <li>Carry out Attribution analysis to provide detailed breakdowns of the aspects of a fund manager’s performance</li>
