--- a/index.html
+++ b/index.html
@@ -51,7 +51,27 @@
 
 				<!-- Main -->
 					<div id="main">
+					
+    					<!-- Intro Post -->
+						<div class="image-txt-container">
+							<img src="images/farmerFran2.jpeg" width="360" height="480">
+							<article class="post featured">
 
+								<center>
+								<h2>
+									Hi there 👋
+								</h2>
+								<h3>I am a Dirty Boy who :</h3></center>
+								<ul>
+								<li>💪 loves to solve dirty problems in diverse domains</li>
+								<li>🌍 is currently working in the field of dirt</li>
+								<li>🔥 handled dirty tasks in mud & musk</li>
+								<li>⚡ plays with all kinds of dirt structures - mud, dust, muck, soil etc</li>
+								<li>☀️ at the end of the day, aims to <b>be pure!</b></li>
+								</ul>
+							</article>
+						  </div>
+<!--
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
@@ -160,7 +180,7 @@
 							</footer>
 
 					</div>
-
+-->
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
