--- a/samples.html
+++ b/samples.html
@@ -59,7 +59,7 @@
         							</article>
         							
         							<article>
-            								<a href="#" data-repo="aclink88/disasterRelief"><h2>Classification Methods:</h2><h3>Disaster Relief</h3></a>
+            								<a href="#" data-repo="aclink88/disasterRelief"><h3>Classification Methods in Disaster Relief</h3></a>
             								<p style="margin: 0 0 5px 0;">Testing of different classification methods in relation to the 2010 Haitian earthquake relief effort. This project involved training various models on imagery data collected during the relief efforts to try and correctly locate displaced persons, who were known to be using blue tarps as temporary shelters. The main purpose of this project was to compare performance metrics between the various classification algorithms, such as accuracy (using cross-validation and hold out data) and runtime.</p>
             								<header style="margin: 0; padding: 0;">
                 								<a href="https://github.com/aclink88/disasterRelief"><h6 style="margin: 0;">(GitHub repo link)</h6></a>
