added Spotify feature analysis to sample work

--- a/samples.html
+++ b/samples.html
@@ -65,6 +65,14 @@
                 								<a href="https://github.com/aclink88/disasterRelief"><h6 style="margin: 0;">(GitHub repo link)</h6></a>
                                             </header>		
         							</article>
+        							
+        							<article>
+            								<a href="#" data-repo="aclink88/musicFeatureAnalysis"><h2 style="font-size: 31px;">Music Feature Analysis by Decade</h2></a>
+            								<p style="margin: 0 0 5px 0; font-size: 18px;">Analysis exploring which models can accurately predict the decade in which a song was produced using audio features, both categorical and numerical data, provided via Spotify. The models were trained using PySpark (Python API for Apache Spark) to utilize its distributed computing framework for large-scale data processing. </p>
+            								<header style="margin: 0; padding: 0;">
+                								<a href="https://github.com/aclink88/musicFeatureAnalysis"><h6 style="margin: 0;">(GitHub repo link)</h6></a>
+                                            </header>		
+        							</article>
         						</section>
         										
         						<!-- <div id="readmeContent"> -->
