updating some images, index & placeholder in sample work

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 					
     					<!-- Intro Post -->
 						<div class="image-txt-container">
-							<img src="images/farmerFran2.jpeg" width="360" height="480">
+    						<img src="images/mysticAl.jpg" width="360" height="480">
+							<!-- <img src="images/farmerFran2.jpeg" width="360" height="480"> -->
 							<article class="post featured">
 
 								<center>
