--- a/samples.html
+++ b/samples.html
@@ -73,6 +73,11 @@
                 								<a href="https://github.com/aclink88/musicFeatureAnalysis"><h6 style="margin: 0;">(GitHub repo link)</h6></a>
                                             </header>		
         							</article>
+        							
+        							<article>
+            								<h2 style="font-size: 31px;">Look at the Pretty Puppy</h2>
+            								<img src="images/struttinAl.jpg"> <!-- width="360" height="480"> -->
+        							</article>
         						</section>
         										
         						<!-- <div id="readmeContent"> -->
