--- a/index.html
+++ b/index.html
@@ -53,27 +53,33 @@
 					<div id="main">
 					
     					<!-- Intro Post -->
+    					<h1>	
+        					<img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJ4bGFyMDQ3NDcxbDQ0NDNpeTczdnlxZDQzdmQ2cTM5eWdmY3RkZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7buiO0t8uLXHBDXO/giphy.gif" alt="CrowMilk" style="display: block; margin: 0 auto; width: 800px; height: auto;">
+    					</h1>
 						<div class="image-txt-container">
-    						<img src="images/mysticAl.jpg" width="360" height="480">
+    						<img src="images/headshot.jpg" width="360" height="480">
 							<!-- <img src="images/farmerFran2.jpeg" width="360" height="480"> -->
 							<article class="post featured">
 
 								<center>
 								<h2>
-									Hi there 👋
+									Hey 👋
 								</h2>
-								<h3>I am a Dirty Boy who :</h3></center>
+								<h3>I'm just a Simple Fella who:</h3></center>
 								<ul>
-								<li>💪 loves to solve dirty problems in diverse domains</li>
-								<li>🌍 is currently working in the field of dirt</li>
-								<li>🔥 handled dirty tasks in mud & musk</li>
-								<li>⚡ plays with all kinds of dirt structures - mud, dust, muck, soil etc</li>
-								<li>☀️ at the end of the day, aims to <b>be pure!</b></li>
+								<li>🧩 loves solving problems and automating tasks, regardless of domain</li>
+								<li>💰 is currently working in the field of asset management</li>
+								<li>👨‍💻 plays with all kinds of code - Python, R, HTML, JavaScript</li>
+								<li>🧪 experiments with different models - regressions, clustering, neural networks, etc. </li>
+    							<li>⚾ kicks back with sports and working out
+								<li>☀️ at the end of the day, cares about <b>data, dogs and dong bongs</b></li>
+								<img src="https://media1.tenor.com/m/PSkUgHWAassAAAAC/adley-rutschman.gif" alt="CrowMilk" style="display: block; margin: 0 auto; width: auto; height: 175px;">
 								</ul>
 							</article>
 						  </div>
+						  
 <!--
-						<!-- Featured Post -->
+						<!-- Featured Post
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
@@ -89,7 +95,7 @@
 								</ul>
 							</article>
 
-						<!-- Posts -->
+						<!-- Posts
 							<section class="posts">
 								<article>
 									<header>
@@ -165,10 +171,10 @@
 								</article>
 							</section>
 
-						<!-- Footer -->
+						<!-- Footer
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<!--<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
