--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<li>🧪 experiments with different models - regressions, clustering, neural networks, etc. </li>
     							<li>⚾ kicks back with sports and working out
 								<li>☀️ at the end of the day, cares about <b>data, dogs and dong bongs</b></li>
-								<img src="https://media1.tenor.com/m/PSkUgHWAassAAAAC/adley-rutschman.gif" alt="CrowMilk" style="display: block; margin: 0 auto; width: auto; height: 175px;">
+								<img src="https://media1.tenor.com/m/PSkUgHWAassAAAAC/adley-rutschman.gif" alt="Dadley" style="display: block; margin: 0 auto; width: auto; height: 175px;">
 								</ul>
 							</article>
 						  </div>
@@ -185,9 +185,8 @@
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
-
-					</div>
 -->
+					</div>
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
