--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 					
     					<!-- Intro Post -->
     					<h1>	
+						<h2>
+							This Week's Volo Formation
+						</h2>
+						<img src="images/formation.png" alt="volo" style="display: block; margin: 0 auto; width: 800px; height: auto;">
         					<img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJ4bGFyMDQ3NDcxbDQ0NDNpeTczdnlxZDQzdmQ2cTM5eWdmY3RkZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7buiO0t8uLXHBDXO/giphy.gif" alt="CrowMilk" style="display: block; margin: 0 auto; width: 800px; height: auto;">
     					</h1>
 						<div class="image-txt-container">
