--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<center>
 						<h2>
 							This Week's Volo Formation
-						</h2></center>center>
+						</h2></center>
 						<img src="images/formation.png" alt="volo" style="display: block; margin: 0 auto; width: 1000px; height: auto;">
         					<img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJ4bGFyMDQ3NDcxbDQ0NDNpeTczdnlxZDQzdmQ2cTM5eWdmY3RkZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7buiO0t8uLXHBDXO/giphy.gif" alt="CrowMilk" style="display: block; margin: 0 auto; width: 800px; height: auto;">
     					</h1>
