--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<!-- <img src="images/formation.png" alt="volo" style="display: block; margin: 0 auto; width: 1000px; height: auto;"> -->
 						<style>
 							#soccer-field {
-								background-image: url('images/field.png'); /* Replace with your soccer field image */
+								background-image: url('images/field.jpg'); /* Replace with your soccer field image */
 								background-size: cover;
 								width: 1000px;
 								height: 600px; /* Adjust height as needed */
