--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								background-image: url('images/field.jpg'); /* Replace with your soccer field image */
 								background-size: cover;
 								width: 1000px;
-								height: auto; /* Adjust height as needed */
+								height: 590px; /* Adjust height as needed */
 								position: relative;
 								margin: 0 auto;
 								border: 1px solid #000;
