--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								font-size: 12px;
 							}
 							.marker {
-								font-size: 20px;
+								font-size: 12px;
 							}
 							#controls {
 								text-align: center;
@@ -115,6 +115,7 @@
 								
 								clearButton.addEventListener('click', function() {
 									soccerField.innerHTML = '';
+									localStorage.removeItem('markers');
 								});
 
 								function createPlayer(x, y, name) {
