--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									localStorage.removeItem('markers');
 								});
 
-								function createPlayer(x, y, name) {
+								function createPlayer(x, y, name, nameEntered) {
             								const player = document.createElement('div');
             								player.classList.add('player');
             								player.style.left = `${x}px`;
