--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							            const ctx = canvas.getContext('2d');
 
 							            const img = new Image();
-							            img.src = 'images/field.png'; // Replace with your soccer field image
+							            img.src = 'images/field.jpg'; // Replace with your soccer field image
 							            img.onload = function() {
 							                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
 							
