--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                             });
                                         });
                         
-                                        const image = canvas.toDataURL('image/png');
+                                        const image = canvas.toDataURL('image/jpg');
                                         localStorage.setItem('savedImage', image);
                                     };
                                 }
