--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             
                                 function saveMarkersToGitHub(markers) {
                                     // Use GitHub API to save markers.json to your GitHub repository
-                                    const token = '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';
+                                    const token = 'token';
                                     const repo = 'aclink88/aclink88.github.io';
                                     const path = 'markers.json';
                                     const url = `https://api.github.com/repos/${repo}/contents/${path}`;
