--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 }
                             
                                 function loadMarkers() {
-                                    const url = 'https://raw.githubusercontent.com/your-username/your-repo/main/markers.json';
+                                    const url = 'https://raw.githubusercontent.com/aclink88/aclink88.github.io/main/markers.json';
                                     fetch(url)
                                         .then(response => response.json())
                                         .then(markers => {
