--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
     					<!-- Intro Post -->
     					<h1>	
 						<center>
+					<!--
 						<h2>
 							This Week's Volo Formation
-						</h2></center>
+						</h2></center> -->
 						<!-- <img src="images/formation.png" alt="volo" style="display: block; margin: 0 auto; width: 1000px; height: auto;"> -->
-						<style>
+					<!--	<style>
 							#soccer-field {
 								background-image: url('images/field.jpg'); /* Replace with your soccer field image */
 								background-size: cover;
@@ -383,7 +384,7 @@
                                     }
                                 }
                             });
-                        </script>
+                        </script> -->
 
         					<img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJ4bGFyMDQ3NDcxbDQ0NDNpeTczdnlxZDQzdmQ2cTM5eWdmY3RkZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7buiO0t8uLXHBDXO/giphy.gif" alt="CrowMilk" style="display: block; margin: 0 auto; width: 800px; height: auto;">
     					</h1>
@@ -403,7 +404,7 @@
 								<li>👨‍💻 plays with all kinds of code - Python, R, HTML, JavaScript</li>
 								<li>🧪 experiments with different models - regressions, clustering, neural networks, etc. </li>
     							<li>⚾ kicks back with sports and working out
-								<li>☀️ at the end of the day, cares about <b>data, dogs and dong bongs</b></li>
+								<li>☀️ at the end of the day, cares about <b>data, dogs and homer hoses</b></li>
 								<img src="https://media1.tenor.com/m/PSkUgHWAassAAAAC/adley-rutschman.gif" alt="Dadley" style="display: block; margin: 0 auto; width: auto; height: 175px;">
 								</ul>
 							</article>
