refining mobile view

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         					<img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJ4bGFyMDQ3NDcxbDQ0NDNpeTczdnlxZDQzdmQ2cTM5eWdmY3RkZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7buiO0t8uLXHBDXO/giphy.gif" alt="CrowMilk" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     					</h1>
 						<div class="image-txt-container">
-    						<img src="images/headshot.jpg" style="max-width: 100%; height: auto;">
+    						<img src="images/headshot.jpg" width="360" height="480" style="max-width: 100%; height: auto;">
 							<!-- <img src="images/farmerFran2.jpeg" width="360" height="480"> -->
 							<article class="post featured">
 
