--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			@media screen and (max-width: 768px) {
+				.image-txt-container {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+				}
+				.image-txt-container img {
+					max-width: 80%;
+					height: auto;
+					margin-bottom: 20px;
+				}
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
