--- a/samples.html
+++ b/samples.html
@@ -18,6 +18,30 @@
 				height: auto;
 				display: block;
 				margin: 20px auto;
+				cursor: pointer;
+				transition: opacity 0.3s;
+			}
+			.readme-container img:hover {
+				opacity: 0.8;
+			}
+			#lightbox {
+				display: none;
+				position: fixed;
+				z-index: 9999;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.9);
+				justify-content: center;
+				align-items: center;
+				cursor: pointer;
+			}
+			#lightbox img {
+				max-width: 90%;
+				max-height: 90%;
+				object-fit: contain;
+				cursor: default;
 			}
 		</style>
 	</head>
